# PyHEOR

./: .gitignore  README.md  README_fr.md  README_zh.md  __init__.py  bia.py  comparison.py  des.py  excel_export.py  excel_model.py  fitting.py  microsim.py  model.py  nma.py  plotting.py  psm.py  pyproject.toml  results.py  survival.py  utils.py
examples/: demo_comparison.py  demo_hiv_model.py  demo_ipd_fitting.py  demo_microsim.py  demo_psm_model.py  ipd_fitting_results.xlsx  markov_base_case.xlsx  psm_base_case.xlsx  psm_owsa.xlsx  psm_psa.xlsx
src/pyheor/: __init__.py  distributions.py  plotting.py  survival.py  utils.py
src/pyheor/analysis/: __init__.py  bia.py  calibration.py  comparison.py  results.py
src/pyheor/evidence/: __init__.py  digitize.py  fitting.py  nma.py
src/pyheor/export/: __init__.py  excel.py  excel_model.py  report.py
src/pyheor/models/: __init__.py  des.py  markov.py  microsim.py  psm.py
tests/: conftest.py  test_bia.py  test_calibration.py  test_comparison.py  test_des.py  test_digitize.py  test_distributions.py  test_fitting.py  test_microsim.py  test_model.py  test_nma.py  test_psm.py  test_survival.py  test_utils.py
