[project]
name = "pyheor"
version = "0.1.0"
description = "Python Health Economics Research Optimizer - A framework for Markov cohort models and cost-effectiveness analysis"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "PyHEOR Team"},
]
keywords = ["health economics", "cost-effectiveness", "markov model", "ICER", "PSA", "OWSA"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

dependencies = [
    "numpy>=1.21",
    "pandas>=1.3",
    "matplotlib>=3.5",
    "scipy>=1.7",
]

[project.optional-dependencies]
dev = ["pytest", "jupyter", "seaborn"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short"

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
